# TextToGraph

./: .gitignore  LICENSE  README.md  pyproject.toml  viz.sh
data/: graph_database.db  graph_database.sqlite  world.db
example_text/: doc_4.txt
src/ppcs/: app.py  constants.py  document_processor.py  export_graph_data.py  graph_database.py  graph_manager.py  logger.py  main.py  plot_graph.py  print_pkl_file.py  query_handler.py
src/texttograph/: main.py  plot_graph.py
text/: david-story.txt  dean-wallace-story.md  dr-reyes-story.md  elena-story.md  james-story.md  marcus-story.md  professor-chen-story.md  sarah-story.txt  sofia-extended.md  sofia-story.md  thomas-story.md
