[project]
name = "ppcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eirini", email = "email@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6", # Data validation using Python type hints
    "python-dotenv>=1.0.1", # Read key-value pairs from a .env file and set them as env vars
    "numpy>=2.2.3", # Fundamental package for array computing in Python
    "langchain-text-splitters>=0.3.6", # LangChain text splitting utilities
    "langchain-ollama>=0.2.3", # An integration package connecting Ollama and LangChain
    "plotly>=6.0.0", # An open-source, interactive data visualization library for Python
    "networkx>=3.4.2", # Python package for creating and manipulating graphs and networks
]

[project.optional-dependencies]
dev = [
    "pynvim>=0.5.2", # Python client for Neovim
    "jedi-language-server>=0.43.1", # A language server for Jedi!
    "ruff>=0.9.3", # An extremely fast Python linter and code formatter, written in Rust
    "ipython>=8.31.0", # IPython: Productive Interactive Computing
    "plotext>=5.3.2", # plotext plots directly on terminal
    "ipdb>=0.13.13", # IPython-enabled pdb
    "tqdm>=4.67.1", # Fast, Extensible Progress Meter
]

[project.scripts]
ppcs = "ppcs:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I", "N", "UP"]
        # `I`: isort
        # `N`: pep8-naming
        # `UP`: pyupgrade
line-length = 90
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
